package com.yonatankarp.prototype

abstract class Beast : Prototype<Beast>()
