package com.yonatankarp.prototype

abstract class Mage : Prototype<Mage>()
