package com.yonatankarp.prototype

abstract class Warlord : Prototype<Warlord>()
